--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Darts Training Calculator</string>
     <string name="settings">Settings</string>
     <string name="history">History</string>
-    <string name="toss">Throw</string>
+    <string name="toss">Add Throw</string>
+    <string name="invalid_trow_message">Enter valid values</string>
 </resources>
