--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="history">History</string>
     <string name="toss">Add Throw</string>
     <string name="invalid_trow_message">Enter valid values</string>
+    <string name="press_back_again_to_exit">Press back again to exit</string>
 </resources>
