added score calculation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <string name="game_key">game_key</string>
     <string name="prevent_sleep_key">prevent_sleep_key</string>
+    <string name="new_game">new_game</string>
 </resources>
