--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="share">Share</string>
     <string name="delete_all">Delete All</string>
+    <string name="delete_all_data">This operation cannot be undone. Are you sure you want to delete all data?</string>
 </resources>
