--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="new_game">New game</string>
     <string name="start_playing_by_adding_your_throws">Start playing by adding your throws.</string>
     <string name="undo">Undo</string>
+    <string name="share_game_text">%1$s\nGame:%2$d&#160;&#160;&#160;Total throws:%3$d\n\n%4$s</string>
 </resources>
