--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="restart">Restart</string>
-
 
     <!-- Preferences Constants -->
     <string name="game_key">game_key</string>
@@ -17,7 +15,6 @@
     <string name="invalid_trow_message">Enter valid values</string>
     <string name="press_back_again_to_exit">Press back again to exit</string>
     <string name="prevent_phone_from_sleeping">Prevent phone from sleeping</string>
-    <!--    <string name="new_game">new_game</string>-->
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
     <string name="all_progress_will_be_lost">All progress will be lost. Are you sure you want to restart the game?</string>
@@ -33,4 +30,5 @@
     <string name="undo">Undo</string>
     <string name="share_game_text">%1$s\nGame:%2$d&#160;&#160;&#160;Total throws:%3$d\n\n%4$s</string>
     <string name="start_new_game">Start new game</string>
+    <string name="score_fragment_title_bar">Score %1$d/%2$d</string>
 </resources>
