--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,12 @@
 <resources>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="restart">Restart</string>
-
     <!-- Preferences Constants -->
-    <string name="game_key">game_key</string>
-    <string name="default_game_value">501</string>
-    <string name="prevent_sleep_key">prevent_sleep_key</string>
+    <string name="game_key" translatable="false">game_key</string>
+    <string name="default_game_value" translatable="false">501</string>
+    <string name="prevent_sleep_key" translatable="false">prevent_sleep_key</string>
     <!-- End of Preferences Constants -->
 
-    <string name="app_name">Darts Training Calculator</string>
+    <string name="app_name" translatable="false">Darts Training Calculator</string>
+
     <string name="settings">Settings</string>
     <string name="history">History</string>
     <string name="toss">Add Throw</string>
@@ -29,6 +27,12 @@
     <string name="start_playing_by_adding_your_throws">Start playing by adding your throws.</string>
     <string name="undo">Undo</string>
     <string name="share_game_text">%1$s\nGame:%2$d&#160;&#160;&#160;Total throws:%3$d\n\n%4$s</string>
+    <string name="game_details_game_throws">Game:%1$d&#160;&#160;&#160;Total throws:%2$d</string>
     <string name="start_new_game">Start new game</string>
     <string name="score_fragment_title_bar">Score %1$d/%2$d</string>
+    <string name="choose_your_game">Choose your game</string>
+    <string name="on">On</string>
+    <string name="off">Off</string>
+    <string name="game_with_colon">Game:</string>
+    <string name="total_throws_with_colon">Total throws:</string>
 </resources>
