--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -18,8 +18,8 @@
     <string name="new_game">Новая игра</string>
     <string name="start_playing_by_adding_your_throws">Начните играть, добавляя броски.</string>
     <string name="undo">Отменить</string>
-    <string name="share_game_text">%1$s\nИгра:%2$d&#160;&#160;&#160;Всего бросков:%3$d\n\n%4$s</string>
-    <string name="game_details_game_throws">Игра:%1$d&#160;&#160;&#160;Всего бросков:%2$d</string>
+    <string name="share_game_text">%1$s\nИгра: %2$d&#160;&#160;&#160;Всего бросков: %3$d\n\n%4$s</string>
+    <string name="game_details_game_throws">Игра: %1$d&#160;&#160;&#160;Всего бросков: %2$d</string>
     <string name="start_new_game">Начать новую игру</string>
     <string name="score_fragment_title_bar">Счёт %1$d/%2$d</string>
     <string name="choose_your_game">Выбор игры</string>
@@ -27,4 +27,5 @@
     <string name="off">Выкл</string>
     <string name="game_with_colon">Игра:</string>
     <string name="total_throws_with_colon">Всего бросков:</string>
+    <string name="delete">Удалить</string>
 </resources>
