--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,8 +26,8 @@
     <string name="new_game">New game</string>
     <string name="start_playing_by_adding_your_throws">Start playing by adding your throws.</string>
     <string name="undo">Undo</string>
-    <string name="share_game_text">%1$s\nGame:%2$d&#160;&#160;&#160;Total throws:%3$d\n\n%4$s</string>
-    <string name="game_details_game_throws">Game:%1$d&#160;&#160;&#160;Total throws:%2$d</string>
+    <string name="share_game_text">%1$s\nGame: %2$d&#160;&#160;&#160;Total throws: %3$d\n\n%4$s</string>
+    <string name="game_details_game_throws">Game: %1$d&#160;&#160;&#160;Total throws: %2$d</string>
     <string name="start_new_game">Start new game</string>
     <string name="score_fragment_title_bar">Score %1$d/%2$d</string>
     <string name="choose_your_game">Choose your game</string>
@@ -35,4 +35,5 @@
     <string name="off">Off</string>
     <string name="game_with_colon">Game:</string>
     <string name="total_throws_with_colon">Total throws:</string>
+    <string name="delete">Delete</string>
 </resources>
